--- a/index.html
+++ b/index.html
@@ -9,7 +9,24 @@
 </head>
 
 <body>
+    <h1>Hola esta es una prueba de git</h1>
+    <h2>para mis compañeros de la clase :v</h2>
 
+    <section>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam est ut delectus dolores reiciendis ducimus. Ab autem velit hic labore cupiditate provident exercitationem error! Facere iure quo doloribus eum voluptatum?
+    </section>
+
+    <p>
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cupiditate nobis voluptatem ipsa, aliquid eos porro atque et excepturi ab hic non nisi fuga accusamus fugiat temporibus quidem possimus, numquam libero.
+    </p>
+
+    <article>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis repellendus nisi non placeat maiores odio reiciendis officia rerum deserunt laboriosam dolore mollitia repellat aliquam officiis, doloribus eligendi fuga facere autem!
+    </article>
+
+    <section>
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Blanditiis officiis optio est sapiente incidunt porro maxime reprehenderit? Sit aperiam asperiores voluptatum nobis doloremque nisi corporis vel eaque tenetur delectus? Id?
+    </section>
 </body>
 
 </html>
