--- a/index.html
+++ b/index.html
@@ -14,9 +14,11 @@
 
     <p>En esta clase estamos aprendiendo un poco acerca de las Branch's</p>
 
-    <article>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis repellendus nisi non placeat maiores odio reiciendis officia rerum deserunt laboriosam dolore mollitia repellat aliquam officiis, doloribus eligendi fuga facere autem!
-    </article>
+    <div>
+        <section>
+            Hola a todos los callados de mi grupo XD
+        </section>
+    </div>
 
     <section>
         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Blanditiis officiis optio est sapiente incidunt porro maxime reprehenderit? Sit aperiam asperiores voluptatum nobis doloremque nisi corporis vel eaque tenetur delectus? Id?
